# llm-gpu-5

./: .gitignore  Modelfile  auto_train.py  capture_mha_oracle.py  changelog.md  corpus_utils.py  diagnose_padding.py  env_config.py  generate.py  gitpush.py  gpu_memory.py  gpu_timing.py  implementation_pla1n.md  implementation_plan.md  index.md  interactive_model_tester.py  logging_config.py  loss_landscape_plotter.py  main.py  pipeline.py  pyproject.toml  readme.md  regime_monitor.py  regime_policy_optimizer.py  run_config.py  scheduler.py  smoke_train_mha_integration.py  test_ffn_gpu_backward.py  test_label_smoothing_loss.py  test_mha_golden_model.py  test_mha_integration_parity.py  test_regime_monitor.py  test_regime_policy_optimizer.py  train.py  training_log_plotter.py  training_metrics.py  traininglog.md  walkthrough.md
config/: presets_gt730_v2.json
core/: __init__.py  kernels.py  loss.py  mha_kernels.py  mha_ops.py  ops.py
docs/: ARCHITECTURE_GUIDE.md  FINEWEB_SETUP.md  FreshStartF1000_stories.md  GETTING_STARTED.md  LOGGING.md  LOGS_GUIDE.md  MSVC_FIX_REPORT.md  PROJECT_COMPLETION.md  QUICK_REFERENCE.md  REGIME_CONTROLLER.md  SCALING_T64_CHANGES.md  TRAINING_MODES.md  TRAINING_WORKFLOW.md  changelog.md  index.md  readme.md  stepchangelog.md  todo.md  todos-all.md
helpers/: create_lightweight_dataset.py  download_fineweb.ps1  download_fineweb.py  test_minimal_kernel.py
input/: README.md
model/: __init__.py  gpt.py  gpt.py.backup_with_backward
output/: README.md  last_run_config.json  training_metrics_latest.csv  training_metrics_latest.jsonl
(+33 files in other folders)
