[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gt730_llm"
version = "0.1.0"
description = "End-to-end CUDA tiny-transformer runtime for NVIDIA GeForce GT 730"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19",
    "pycuda==2022.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "httpx>=0.27,<0.28",
]
data = [
    "datasets>=2.19,<3",
]
web = [
    "fastapi>=0.110,<0.111",
    "uvicorn>=0.30,<0.31",
    "jinja2>=3.1,<3.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gt730_llm*"]
